<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="apk_name">ylis</string>
    <string name="app_name">老年福敬老院护理端</string>
    <string name="elterly_info_system">老年福智慧养老信息系统</string>
    <string name="package_name">com.healthmanage.ylis</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_login">用户名/手机号</string>
    <string name="prompt_password">密码</string>
    <string name="login">登录</string>
    <string name="nouser">用户名或密码错误</string>
    <string name="noactive">用户未激活</string>
    <string name="lock">用户已锁定</string>
    <string name="delete_user">用户已注销</string>
    <string name="login_fail">登录失败</string>
    <string name="none">无</string>
    <string name="up_password">修改密码</string>
    <string name="no_list">没有权限</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">该项不可为空</string>
    <string name="user_exception">账户异常</string>
    <!-- update -->
    <string name="soft_update_no">没有更新</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_updatebtn">立即更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消更新</string>
    <string name="need_connect">请连接网络！</string>
    <string name="finding">正在查询</string>
    <string name="connec_device">正在连接</string>
    <string name="loading">正在加载</string>
    <string name="loading_save2">正在保存</string>
    <string name="save_loading">正在提交</string>
    <string name="logging">正在登录&#8230;</string>
    <string name="hint_input_connect_number">请输入交接人员工号!</string>
    <string name="hint_logout">再按一次退出</string>
    <string name="frequency_a_time">白班</string>
    <string name="frequency_b_time">夜班</string>
    <string name="questNoes_1">qt01</string>
    <string name="questNoes_2">qt02</string>
    <string name="questNoes_3">qt03</string>
    <string name="questNoes_4">qt04</string>
    <string name="questNoes_5">qt05</string>
    <string name="questNoes_6">qt06</string>

    <string name="people_mind">老人精神:</string>
    <string name="people_mood">老人情绪:</string>
    <string name="people_food">老人饮食:</string>
    <string name="people_dose">老人服药:</string>
    <string name="people_injection">老人针剂:</string>
    <string name="people_skin">老人皮肤:</string>
    <string name="people_body_clean">身体清洁:</string>
    <string name="people_clothes_clean">衣物清洁:</string>
    <string name="people_room_health">室内外卫生:</string>
    <string name="people_another">其他</string>
    <string name="staff_name">姓名:</string>
    <string name="staff_gender">性别:</string>
    <string name="staff_numebr">员工号:</string>
    <string name="change_password">修改密码</string>
    <string name="update_vertion">版本更新</string>
    <string name="hight_vertion">已是最新版本</string>
    <string name="have_hight_vertion">有新版本,点击更新</string>
    <string name="about_us">关于我们</string>
    <string name="care_leave">护理级别:</string>
    <string name="staff_location">所在院:</string>
    <string name="staff_domicile">居住地:</string>
    <string name="record_ques_health">一、身体健康状况：</string>
    <string name="record_ques_health_1">1、入住前患有哪种疾病？</string>
    <string name="record_ques_health_2">2、每日接受那些药物治疗？</string>
    <string name="record_ques_health_3">3、每日接受哪些协助治疗？</string>
    <string name="record_ques_health_4_1">4、曾经做过哪些手术？</string>
    <string name="record_ques_health_4_2">术后留有哪些不适症</string>
    <string name="record_ques_health_5_1">5、曾经患过哪种肿瘤？</string>
    <string name="record_ques_health_5_2">病情控制方式</string>
    <string name="record_ques_health_6_1">6、对哪些药物过敏？</string>
    <string name="record_ques_health_6_2">过敏症状</string>
    <string name="record_ques_health_7_1">7、对哪些食物过敏？</string>
    <string name="record_ques_health_7_2">过敏症状</string>
    <string name="record_ques_health_8_1">8、对哪些物质过敏？</string>
    <string name="record_ques_health_8_2">过敏症状</string>
    <string name="record_ques_health_9">9、牙齿：</string>
    <string name="record_ques_health_10">10、视力：</string>
    <string name="record_ques_health_11">11、听力：</string>
    <string name="record_ques_health_12">12、呼吸：</string>
    <string name="record_ques_health_13">13、睡眠：</string>
    <string name="record_ques_health_14">14、身体协调：</string>
    <string name="record_ques_health_15">15、身体移动：</string>
    <string name="record_ques_health_16">16、有哪些不健康行为：</string>
    <string name="record_ques_mind">二、心理/精神状况：</string>
    <string name="record_ques_mind_1">1、感知觉：</string>
    <string name="record_ques_mind_2">2、与人态度：</string>
    <string name="record_ques_mind_3">3、个人行为：</string>
    <string name="record_ques_mind_4">4、个人独立性：</string>
    <string name="record_ques_mind_5">5、情感行为：</string>
    <string name="record_ques_mind_6">6、思维能力：</string>
    <string name="record_ques_mind_7">7、暴力倾向：</string>
    <string name="record_ques_mind_8">8、理解能力：</string>
    <string name="record_ques_mind_9">9、语言表达力：</string>
    <string name="record_ques_mind_10">10、活动能力：</string>
    <string name="record_ques_mind_11">11、性格：</string>
    <string name="record_ques_mind_12">12、社交能力：</string>
    <string name="record_ques_mind_13">13、心理咨询：</string>
    <string name="record_ques_mind_14">14、就医需求：</string>
    <string name="record_ques_life">三、生活能力：</string>
    <string name="record_ques_life_1">1、盥洗：</string>
    <string name="record_ques_life_2">2、进餐：</string>
    <string name="record_ques_life_3_1">3、如厕：</string>
    <string name="record_ques_life_3_2">便秘解决方式：</string>
    <string name="record_ques_life_4">4、饮水：</string>
    <string name="record_ques_life_5">5、穿衣：</string>
    <string name="record_ques_life_6">6、运动：</string>
    <string name="record_ques_life_7">7、收拾个人用品：</string>
    <string name="record_ques_life_8">8、收拾房间：</string>
    <string name="record_ques_life_9">9、外出活动：</string>
    <string name="record_ques_life_10">10、使用电话：</string>
    <string name="record_ques_life_11">11、使用药物：</string>
    <string name="record_ques_life_12">12、财务管理：</string>
    <string name="record_ques_life_13">13、兴趣爱好：</string>
    <string name="record_ques_life_13_1">电视</string>
    <string name="record_ques_life_13_2">收音机</string>
    <string name="record_ques_life_13_3">棋牌</string>
    <string name="record_ques_life_13_4">书法</string>
    <string name="record_ques_life_13_5">健身</string>
    <string name="record_ques_life_13_6">爬山</string>
    <string name="record_ques_life_13_7">唱歌</string>
    <string name="record_ques_life_13_8">唱戏</string>
    <string name="record_ques_life_13_9">打拳</string>
    <string name="record_ques_life_13_10">舞剑</string>
    <string name="record_ques_life_13_11">旅游</string>
    <string name="record_ques_life_13_12">阅读</string>
    <string name="record_ques_life_13_13">朗诵</string>
    <string name="record_ques_life_13_14">编织</string>
    <string name="record_ques_life_13_15">学习</string>
    <string name="record_ques_life_13_16">其他</string>
    <string name="record_ques_All">四、综合评价：</string>
    <string name="record_ques_life_13_number">q231</string>
    <string name="record_ques_life_14_number">q232</string>
    <string name="patroal_elderly_name">老人姓名</string>
    <string name="patroal_info">情况简述</string>
    <string name="patroal_time">发生时间</string>
    <string name="patroal_deal_info">处理措施</string>
    <string name="patroal_elderly_info">老人状况</string>
    <string name="patroal_leader_name">上报领导姓名</string>
    <string name="patroal_home_name">联系家属姓名</string>
    <string name="patroal_home_phone">联系电话</string>
    <string name="patroal_home_back">家属回复</string>
    <string name="patroal_another">其他</string>

    <string name="commit">确认</string>
    <string name="repair_goods_name">报修物品名称</string>
    <string name="repair_goods_position">物品放置位置</string>
    <string name="repair_goods_sattus">物品目前情况</string>
    <string name="repair_goods_recive_people">接报人</string>
    <string name="repair_goods_people">维修人</string>

    <string name="dose_send_manager">发药管理</string>
    <string name="user_drug_manager">药品管理</string>
    <string name="normal_monitor">日常监测</string>
    
    <string name="nibp_name">电子血压计</string>
    <string name="spo_name">血氧仪</string>
    <string name="bg_name">血糖仪</string>
    <string name="pulm_name">肺活量计</string>
    <string name="bc_device_name">尿液分析仪</string>
    <string name="temp_name">耳温枪</string>
    <!-- 尿液分析仪数据 -->
    <string name="bc_uro">尿胆原(URO)</string>
    <string name="bc_uroVal">0 ～ 5.9</string>
    <string name="bc_bld">潜血(BLO)</string>
    <string name="bc_bil">胆红素(BIL)</string>
    <string name="bc_ket">酮体(KET)</string>
    <string name="bc_glu">葡萄糖(GLU)</string>
    <string name="bc_gluVal">3.9 ~ 6.4</string>
    <string name="bc_pro">蛋白质(PRO)</string>
    <string name="bc_ph">酸碱度(PH)</string>
    <string name="bc_nit">亚硝酸盐(NIT)</string>
    <string name="bc_leu">白细胞(LEU)</string>
    <string name="bc_sg">比重(SG)</string>
    <string name="bc_vc">抗坏血酸(VC)</string>
    <string name="bc_com">Norm</string>
    <string name="bc_name">-</string>
    <string name="bc_phVal">4.6 ~ 8.0</string>
    <string name="bc_sgVal">1.010 ~ 1.025</string>
    <string name="bc_can">数值</string>
    <string name="bc_na">名称</string>
    <string name="bc_val">参考值</string>
    


    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_tast_connect">TastConnectActivity</string>
    <string name="title_activity_tast_connect_second">TastConnectSecondActivity</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_edit_task_connect">EditTaskConnectActivity</string>
    <string name="title_activity_task_detail">TaskDetailActivity</string>
    <string name="title_activity_setting_info">SettingInfoActivity</string>
    <string name="title_activity_hours_record">HoursRecordActivity</string>
    <string name="title_activity_expand_dose">ExpandDoseActivity</string>
    <string name="title_activity_turn_body">TurnBodyActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_histroy_elderly_task">HistroyElderlyTaskActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_sannitation">SannitationActivity</string>
    <string name="title_activity_patroal_histroy">PatroalHistroyActivity</string>
    <string name="title_activity_patroal_exception_list">PatroalExceptionListActivity</string>
    <string name="title_activity_turn_body_histroy">TurnBodyHistroyActivity</string>
    <string name="title_activity_laundry_histroy">LaundryHistroyActivity</string>
    <string name="title_activity_connext_task_exception">ConnextTaskExceptionActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>