<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fcilities_exception"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.healthmanage.ylis.activity.FcilitiesExceptionActivity">

    <include layout="@layout/title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center_vertical"
        >
        <TextView
            android:id="@+id/tv_repair_goods_name"
            style="@style/CommonViewStyle"
            android:padding="10dp"
            android:text="@string/repair_goods_name"
            />
        <EditText
            android:id="@+id/et_repair_goods_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:maxLines="2"
            android:ellipsize="end"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/tv_repair_goods_position"
            style="@style/CommonViewStyle"
            android:padding="10dp"
            android:text="@string/repair_goods_position"
            />
        <EditText
            android:id="@+id/et_repair_goods_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:maxLines="2"
            android:ellipsize="end"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/tv_repair_goods_sattus"
            style="@style/CommonViewStyle"
            android:padding="10dp"
            android:text="@string/repair_goods_sattus"
            />

        <EditText
            android:id="@+id/et_repair_goods_sattus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:maxLines="2"
            android:ellipsize="end"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/tv_repair_goods_recive_people"
            style="@style/CommonViewStyle"
            android:padding="10dp"
            android:text="@string/repair_goods_recive_people"
            />

        <EditText
            android:id="@+id/et_repair_goods_recive_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:maxLines="2"
            android:ellipsize="end"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_line"/>

    <TextView
        android:id="@+id/tv_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:gravity="center"
        android:layout_margin="50dp"
        android:text="@string/commit"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:background="@drawable/pressed_all_main_color_btn"
        />

</LinearLayout>
