<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dose_manager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.healthmanage.ylis.activity.DoseManagerActivity"
    android:orientation="vertical">

    <include layout="@layout/title"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_fragments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="81dp">
        <FrameLayout
            android:id="@+id/fl_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        </FrameLayout>

    </android.support.v4.view.ViewPager>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="-81dp"
        android:background="@color/gray_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@color/gray_bg_4">
        <LinearLayout
            android:id="@+id/ll_send_drug"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_send_drug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_dose_send_manager_choosed"/>
            <TextView
                android:id="@+id/tv_send_drug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/dose_send_manager"
                android:textSize="18sp"
                android:textColor="@color/main_color"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_use_drug"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_use_drug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_user_drug_manager_unchoosed"/>
            <TextView
                android:id="@+id/tv_use_drug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/user_drug_manager"
                android:textSize="18sp"
                android:textColor="@color/main_black"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_normal_monitor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_nromal_monitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_normal_monitor_unchoosed"/>
            <TextView
                android:id="@+id/tv_normal_monitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/normal_monitor"
                android:textSize="18sp"
                android:textColor="@color/main_black"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
